Refactor README by removing installation details
Removed sections for installation, troubleshooting, and other content to streamline the README.